--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -49,7 +49,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
-        if: github.event_name != 'pull_request' && "!startsWith(github.ref, 'refs/heads/release/')"
+        if: "github.event_name != 'pull_request' && !startsWith(github.ref, 'refs/heads/release/')"
         uses: JamesIves/github-pages-deploy-action@v4.6.1
         with:
           token: ${{ secrets.YGEUNKIM_PAGE_PAT }}
