--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -221,3 +221,5 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.0.1
   - text: "Version 2.1.0"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.0
+  - text: "Version 2.1.1"
+    href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.1
