--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -207,8 +207,8 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v0.12.0
   # - text: "Version 1.0.0"
   #   href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.0
-  - text: "Version 1.0.1"
-    href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.1
+  # - text: "Version 1.0.1"
+  #   href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.1
   - text: "Version 1.0.2"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v1.0.2
   - text: "Version 1.1.0"
@@ -221,5 +221,5 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.0.1
   - text: "Version 2.1.0"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.0
-  - text: "Version 2.1.1"
-    href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.1
+  - text: "Version 2.1.2"
+    href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.2
