--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -67,20 +67,20 @@ reference:
   - summary.normaliw
   - summary.bvharsp
 
-- title: Deprecated
-  desc: >
-    Deprecated functions that will be removed soon
-  contents:
-  - bvar_sv
-  - bvar_ssvs
-  - bvar_horseshoe
-  - bvhar_sv
-  - bvhar_ssvs
-  - bvhar_horseshoe
-  - init_ssvs
-  - choose_ssvs
-  - sim_ssvs_var
-  - sim_horseshoe_var
+# - title: Deprecated
+#   desc: >
+#     Deprecated functions that will be removed soon
+#   contents:
+#   - bvar_sv
+#   - bvar_ssvs
+#   - bvar_horseshoe
+#   - bvhar_sv
+#   - bvhar_ssvs
+#   - bvhar_horseshoe
+#   - init_ssvs
+#   - choose_ssvs
+#   - sim_ssvs_var
+#   - sim_horseshoe_var
 
 - title: Forecasting
   desc: ~
