add med option to use median as point forecast

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -329,6 +329,7 @@ importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
 importFrom(stats,logLik)
+importFrom(stats,median)
 importFrom(stats,nobs)
 importFrom(stats,optim)
 importFrom(stats,pt)
