--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.covspec)
 export(is.dlspec)
+export(is.gdpspec)
 export(is.horseshoespec)
 export(is.interceptspec)
 export(is.ldltspec)
@@ -248,6 +249,7 @@ export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
 export(set_dl)
+export(set_gdp)
 export(set_horseshoe)
 export(set_intercept)
 export(set_lambda)
