--- a/.github/workflows/py-wheel-check.yaml
+++ b/.github/workflows/py-wheel-check.yaml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [main, master, 'hotfix/*', 'release/*', develop, 'feature/py-*']
+    branches: [main, master, 'hotfix/*', 'release/*', develop, 'feature/py-*', 'feature/*-withci']
   pull_request:
     branches: [main, master, 'hotfix/*', 'release/*', develop]
 
@@ -33,22 +33,25 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libboost-all-dev libeigen3-dev
+          sudo apt-get install -y libboost-all-dev libeigen3-dev libspdlog-dev
           echo $(sudo apt list --installed)
           echo "EIGEN_INCLUDE_DIR=/usr/include/eigen3" >> $GITHUB_ENV
           echo "BOOST_INCLUDE_DIR=/usr/include/boost" >> $GITHUB_ENV
+          echo "SPDLOG_INCLUDE_DIR=/usr/include/spdlog" >> $GITHUB_ENV
       
       - name: Set system dependencies on macOS
         if: runner.os == 'macOS'
         run: |
           brew update
-          brew install llvm libomp boost eigen
+          brew install llvm libomp boost eigen spdlog
           EIGEN_LOC=$(brew --prefix eigen)
           BOOST_LOC=$(brew --prefix boost)
+          SPDLOG_LOC=$(brew --prefix spdlog)
           LLVM_LOC=$(brew --prefix llvm)
           OMP_LOC=$(brew --prefix libomp)
           echo "EIGEN_INCLUDE_DIR=$EIGEN_LOC/include/eigen3" >> $GITHUB_ENV
           echo "BOOST_INCLUDE_DIR=$BOOST_LOC/include" >> $GITHUB_ENV
+          echo "SPDLOG_INCLUDE_DIR=$SPDLOG_LOC/include" >> $GITHUB_ENV
           echo "LLVM_LOC=$LLVM_LOC" >> $GITHUB_ENV
           echo "OMP_LOC=$OMP_LOC" >> $GITHUB_ENV
           echo "CC=$LLVM_LOC/bin/clang" >> $GITHUB_ENV
@@ -91,6 +94,14 @@ jobs:
             Write-Error "Wrong boost path"
             exit 1
           }
+          $spdlogRelease = Invoke-RestMethod -Uri "https://api.github.com/repos/gabime/spdlog/releases/latest"
+          $spdlogVersion = $latestRelease.tag_name
+          $spdlogUrl = "https://github.com/gabime/spdlog/archive/refs/tags/$spdlogVersion.zip"
+          $spdlogZip = "spdlog.zip"
+          Invoke-WebRequest -Uri $spdlogUrl -OutFile $spdlogZip
+          Expand-Archive -Path $spdlogZip -DestinationPath "C:\spdlog"
+          $spdlogPath = "C:\spdlog\spdlog-$($spdlogVersion.TrimStart('v'))\include"
+          echo "SPDLOG_INCLUDE_DIR=$spdlogPath" >> $Env:GITHUB_ENV
           echo "EIGEN_INCLUDE_DIR=$eigenPath" >> $Env:GITHUB_ENV
           echo "BOOST_INCLUDE_DIR=$boostPath" >> $Env:GITHUB_ENV
 
@@ -99,12 +110,14 @@ jobs:
         run: |
           ls ${{ env.EIGEN_INCLUDE_DIR }}
           ls ${{ env.BOOST_INCLUDE_DIR }}
+          ls ${{ env.SPDLOG_INCLUDE_DIR }}
       
       - name: Verify Eigen and boost on Windows
         if: runner.os == 'Windows'
         run: |
           dir ${{ env.EIGEN_INCLUDE_DIR }}
           dir ${{ env.BOOST_INCLUDE_DIR }}
+          dir ${{ env.SPDLOG_INCLUDE_DIR }}
           
       - name: Install requirements
         run: |
