add bvharspdlog header

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,7 @@ Imports:
     bayesplot
 LinkingTo: 
     BH (>= 1.84.0-0),
-    Rcpp,
+    Rcpp (>= 0.10.0),
     RcppEigen (>= 0.3.4.0.0),
     RcppSpdlog,
     RcppThread
