--- a/.github/workflows/py-github-check.yaml
+++ b/.github/workflows/py-github-check.yaml
@@ -37,7 +37,6 @@ jobs:
           echo "EIGEN_INCLUDE_DIR=/usr/include/eigen3" >> $GITHUB_ENV
           echo "BOOST_INCLUDE_DIR=/usr/include/boost" >> $GITHUB_ENV
           echo "SPDLOG_INCLUDE_DIR=/usr/include/spdlog" >> $GITHUB_ENV
-          echo "FMT_INCLUDE_DIR=/usr/include/fmt" >> $GITHUB_ENV
       
       - name: Set system dependencies on macOS
         if: runner.os == 'macOS'
@@ -47,13 +46,11 @@ jobs:
           EIGEN_LOC=$(brew --prefix eigen)
           BOOST_LOC=$(brew --prefix boost)
           SPDLOG_LOC=$(brew --prefix spdlog)
-          FMT_LOC=$(brew --prefix fmt)
           LLVM_LOC=$(brew --prefix llvm)
           OMP_LOC=$(brew --prefix libomp)
           echo "EIGEN_INCLUDE_DIR=$EIGEN_LOC/include/eigen3" >> $GITHUB_ENV
           echo "BOOST_INCLUDE_DIR=$BOOST_LOC/include" >> $GITHUB_ENV
           echo "SPDLOG_INCLUDE_DIR=$SPDLOG_LOC/include" >> $GITHUB_ENV
-          echo "FMT_INCLUDE_DIR=$FMT_LOC/include" >> $GITHUB_ENV
           echo "LLVM_LOC=$LLVM_LOC" >> $GITHUB_ENV
           echo "OMP_LOC=$OMP_LOC" >> $GITHUB_ENV
           echo "CC=$LLVM_LOC/bin/clang" >> $GITHUB_ENV
@@ -64,10 +61,10 @@ jobs:
       - name: Set system dependencies on Windows
         if: runner.os == 'Windows'
         run: |
-          $vcpkgRoot = "$(Get-Location)\vcpkg"
-          vcpkg install eigen3
-          vcpkg install boost
-          vcpkg install spdlog
+          $vcpkgRoot = $Env:VCPKG_INSTALLATION_ROOT
+          vcpkg install eigen3 --quiet
+          vcpkg install boost --quiet
+          vcpkg install spdlog --quiet
           $installPath = $null
           $tripletCand = @(
             "$vcpkgRoot\installed\x64-windows",
@@ -90,7 +87,6 @@ jobs:
             "eigen" = "$installPath\include\eigen3"
             "boost" = "$installPath\include"
             "spdlog" = "$installPath\include"
-            "fmt" = "$installPath\include"
           }
           foreach ($lib in $libPath.Keys) {
             if (Test-Path $libPath[$lib]) {
@@ -108,7 +104,6 @@ jobs:
           ls ${{ env.EIGEN_INCLUDE_DIR }}
           ls ${{ env.BOOST_INCLUDE_DIR }}
           ls ${{ env.SPDLOG_INCLUDE_DIR }}
-          ls ${{ env.FMT_INCLUDE_DIR }}
           mkdir temp-dir
       
       - name: Verify C++ libraries on Windows
@@ -117,7 +112,6 @@ jobs:
           dir ${{ env.EIGEN_INCLUDE_DIR }}
           dir ${{ env.BOOST_INCLUDE_DIR }}
           dir ${{ env.SPDLOG_INCLUDE_DIR }}
-          dir ${{ env.FMT_INCLUDE_DIR }}
           New-Item -ItemType Directory -Force -Path temp-dir
 
       - name: Install package from github
