--- a/.github/workflows/py-pip-check.yaml
+++ b/.github/workflows/py-pip-check.yaml
@@ -88,11 +88,12 @@ jobs:
             Write-Error "No valid installation path"
             exit 1
           }
+          Get-ChildItem -Path "$installPath\include" -Recurse -Depth 2 | Format-Table Name, LastWriteTime
           $libPath = @{
             "eigen" = "$installPath\include\eigen3"
-            "boost" = "$installPath\include"
-            "spdlog" = "$installPath\include"
-            "fmt" = "$installPath\include"
+            "boost" = "$installPath\include\boost"
+            "spdlog" = "$installPath\include\spdlog"
+            "fmt" = "$installPath\include\fmt"
           }
           foreach ($lib in $libPath.Keys) {
             if (Test-Path $libPath[$lib]) {
