--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,6 +17,8 @@ home:
   # see the configuration in .github/workflows/pkgdown.yaml
   - text: VERSION_TEXT
     href: VERSION_REF
+  - text: C++ headers
+    href: https://ygeunkim.github.io/package/bvhar/cpp/
   - text: bvhar for Python
     href: https://ygeunkim.github.io/package/bvhar/python/
 
