--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -25,7 +25,9 @@ jobs:
         run: sudo apt-get install -y doxygen graphviz
       
       - name: Extract version number from DESCRIPTION
-        run: sed -i 's|BVHAR_VERSION|$(grep '^Version:' DESCRIPTION | cut -d ' ' -f 2)' inst/doxygen/Doxyfile
+        run: |
+          VERSION=$(grep '^Version:' DESCRIPTION | cut -d ' ' -f 2)
+          sed -i 's|BVHAR_VERSION|$VERSION|' inst/doxygen/Doxyfile
     
       - name: Render doxygen
         run: doxygen inst/doxygen/Doxyfile
