return lpl in each step

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(HQ,bvharmn)
 S3method(HQ,logLik)
 S3method(HQ,varlse)
 S3method(HQ,vharlse)
+S3method(alpl,bvharcv)
 S3method(autolayer,predbvhar)
 S3method(autoplot,bvhardynsp)
 S3method(autoplot,bvharirf)
@@ -184,6 +185,7 @@ export(FPE)
 export(HQ)
 export(VARtoVMA)
 export(VHARtoVMA)
+export(alpl)
 export(autolayer)
 export(autoplot)
 export(bound_bvhar)
