--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -38,6 +38,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Memory issue in R
+        if: ${{ (matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'devel') || (matrix.config.os == 'windows-latest' && matrix.config.r == 'oldrel-3') }}
+        run: echo "MAKEFLAGS=-j1" >> $GITHUB_ENV
+
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
