--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,7 +21,8 @@ jobs:
           - {os: macOS-latest,   r: 'release'}
 
           - {os: windows-latest, r: 'release'}
-          - {os: windows-latest, r: 'oldrel-3'} # change to oldrel-3 in Spring 2025
+          # rtools40's older compiler: R-4.0.0 to to R-4.1.3
+          - {os: windows-latest, r: '4.1'}
 
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
@@ -40,7 +41,9 @@ jobs:
 
       - name: Memory issue in R
         if: ${{ (matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'devel') || (matrix.config.os == 'windows-latest' && matrix.config.r == 'oldrel-3') }}
-        run: echo "MAKEFLAGS=-j1" >> $GITHUB_ENV
+        run: |
+          echo "MAKEFLAGS=-j1" >> $GITHUB_ENV
+          echo "R_MAX_VSIZE=8G" >> $GITHUB_ENV
 
       - uses: r-lib/actions/setup-pandoc@v2
 
