--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -22,10 +22,7 @@ jobs:
 
           - {os: windows-latest, r: 'release'}
           # rtools40's older compiler: R-4.0.0 to to R-4.1.3
-          - os: windows-latest
-            r: '4.1'
-            env:
-              MAKEFLAGS: "-j1"
+          - {os: windows-latest, r: '4.1'}
 
           - {os: ubuntu-latest,   r: 'devel', http-user-agent: 'release'}
           - {os: ubuntu-latest,   r: 'release'}
@@ -41,6 +38,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Memory issue in R
+        if: ${{ (matrix.config.os == 'windows-latest' && matrix.config.r == '4.1') }}
+        run: |
+          echo "MAKEFLAGS=-j1" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - uses: r-lib/actions/setup-pandoc@v2
 
