--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -226,3 +226,5 @@ news:
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.0
   - text: "Version 2.1.2"
     href: https://github.com/ygeunkim/bvhar/releases/tag/v2.1.2
+  - text: "Version 2.2.0"
+    href: https://github.com/ygeunkim/bvhar/releases/tag/v2.2.0
