--- a/python/docs/_quarto.yml
+++ b/python/docs/_quarto.yml
@@ -24,11 +24,11 @@ website:
           - text: "bvhar"
             file: intro.qmd
           - text: "bvhar in R"
-            href: https://ygeunkim.github.io/package/bvhar/
+            href: {{< var rref >}}
             target: _blank
     right:
       - icon: github
-        href: https://github.com/ygeunkim/bvhar/tree/develop/python
+        href: {{< var pyref >}}
         aria-label: bvhar-python github
   sidebar:
     style: floating
