--- a/.github/workflows/quartodoc.yaml
+++ b/.github/workflows/quartodoc.yaml
@@ -47,12 +47,10 @@ jobs:
           BRANCH=${GITHUB_REF##*/}
           if [ "$BRANCH" == "develop" ]; then
             echo "TARGET_FOLDER=package/bvhar/dev/python" >> $GITHUB_ENV
-            echo "PY_VERSION_REF=https://github.com/ygeunkim/bvhar/tree/develop/python" >> $GITHUB_ENV
-            echo "R_VERSION_REF=https://ygeunkim.github.io/package/bvhar/dev" >> $GITHUB_ENV
+            sed -i 's|PY_VERSION_REF|https://github.com/ygeunkim/bvhar/tree/develop/python/|; s|R_VERSION_REF|https://ygeunkim.github.io/package/bvhar/dev/|' _variables.yml
           else
             echo "TARGET_FOLDER=package/bvhar/python" >> $GITHUB_ENV
-            echo "PY_VERSION_REF=https://github.com/ygeunkim/bvhar/tree/master/python" >> $GITHUB_ENV
-            echo "R_VERSION_REF=https://ygeunkim.github.io/package/bvhar" >> $GITHUB_ENV
+            sed -i 's|PY_VERSION_REF|https://github.com/ygeunkim/bvhar/tree/master/python/|; s|R_VERSION_REF|https://ygeunkim.github.io/package/bvhar/|' _variables.yml
           fi
         working-directory: python/docs
 
