--- a/python/docs/_variables.yml
+++ b/python/docs/_variables.yml
@@ -1,5 +1,5 @@
 version: QUARTODOC_VERSION
 
-ref:
-  py: PY_VERSION_REF
-  r: R_VERSION_REF
+myref:
+  pyref: PY_VERSION_REF
+  rref: R_VERSION_REF
