add config function for mniw usage in _bayes and some validate misc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -227,6 +227,7 @@ export(is.dlspec)
 export(is.gdpspec)
 export(is.horseshoespec)
 export(is.interceptspec)
+export(is.iwspec)
 export(is.ldltspec)
 export(is.ngspec)
 export(is.predbvhar)
@@ -253,6 +254,7 @@ export(set_dl)
 export(set_gdp)
 export(set_horseshoe)
 export(set_intercept)
+export(set_iw)
 export(set_lambda)
 export(set_ldlt)
 export(set_ng)
