--- a/.github/workflows/py-github-check.yaml
+++ b/.github/workflows/py-github-check.yaml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [main, master, 'hotfix/*', 'release/*', develop]
   pull_request:
-    branches: [main, master, 'hotfix/*', 'release/*', develop]
+    branches: [main, master, develop]
 
 name: py-github-check
 
