--- a/.github/workflows/py-pip-check.yaml
+++ b/.github/workflows/py-pip-check.yaml
@@ -2,7 +2,7 @@ on:
   push:
     branches: [main, master, 'hotfix/*', 'release/*', develop, 'feature/py-*', 'feature/*-withci']
   pull_request:
-    branches: [main, master, 'hotfix/*', 'release/*', develop]
+    branches: [main, master, develop]
   
 name: py-pip-check
   
