--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, master, 'hotfix/*', 'release/*', develop]
   pull_request:
-    branches: [main, master, 'hotfix/*', 'release/*', develop]
+    branches: [main, master, develop]
 
 name: test-coverage
 
